--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no,user-scalable=no" >
     <meta name="theme-color" content="#000000">
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -12,7 +12,11 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   
     <script src="http://webapi.amap.com/maps?v=1.3&key=f1b425e17e375f9a51e0987f8896562d&plugin=AMap.Autocomplete"></script>
-    <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=**appid**"></script>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.9&key=076cb00b4c9014e47f9b19e1da93daca&plugin=AMap.Autocomplete"></script>
+<!-- 
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.2&key=076cb00b4c9014e47f9b19e1da93daca"></script> -->
+    <script type="text/javascript" src="https://cache.amap.com/lbs/static/addToolbar.js"></script>
+    <script type="text/javascript" src="https://webapi.amap.com/demos/js/liteToolbar.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -78,7 +82,7 @@
       }
     })(640, 640);       
     </script>
-    <title>React App</title>
+    <title>中小学直饮水机卫生监管平台</title>
   </head>
   <body>
     <noscript>
@@ -95,5 +99,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
   </body>
 </html>
